[gd_scene load_steps=2 format=3 uid="uid://working_devroom"]

[ext_resource type="Script" path="res://ui/DevRoomMenu_working.gd" id="1_0"]

[node name="DevRoomMenu" type="CanvasLayer"]
script = ExtResource("1_0")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Developer Room Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RoomSelection" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RoomLabel" type="Label" parent="PanelContainer/VBoxContainer/RoomSelection"]
layout_mode = 2
text = "Room:"

[node name="RoomDropdown" type="OptionButton" parent="PanelContainer/VBoxContainer/RoomSelection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Load Room"

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Close (3 or F10)"
